Optimize page: content/english/java/advanced-options/groupdocs-signature-java-file-format-support/_index.md - - Updated front‑matter date and converted `keywords` to a YAML list containing primary and secondary keywords. - Added primary keyword “check file extension java” to H1, meta description, first paragraph, and multiple headings. - Inserted a Quick Answers section for immediate AI‑friendly facts. - Added definition anchors for `Signature` and `FileType` classes. - Created several question‑based H2 sections with direct 40‑70 word answers (GEO compliance). - Added a comprehensive FAQ section with concise answers. - Included quantified claims (e.g., “over 50 input and output formats”). - Added trust‑signal block at the end with last updated date, tested version, and author.